@@ -1,3 +1,5 @@
+import org.jetbrains.kotlin.gradle.ExperimentalKotlinGradlePluginApi
+import org.jetbrains.kotlin.gradle.dsl.JvmTarget
 import org.jetbrains.kotlin.gradle.plugin.KotlinJsCompilerType
 import org.jetbrains.kotlin.gradle.plugin.KotlinPlatformType
 
@@ -15,12 +17,11 @@ kotlin {
             env = System.getProperty("env")
         }
         systemProperty("env", env ?: "dev")
-        jvmArgs("--enable-preview")
     }
     jvm {
-        compilations.all {
-            kotlinOptions.jvmTarget = "11"
-            compileJavaTaskProvider?.get()?.options?.compilerArgs?.add("--enable-preview")
+        @OptIn(ExperimentalKotlinGradlePluginApi::class)
+        compilerOptions {
+            jvmTarget = JvmTarget.JVM_22
         }
     }
     js(KotlinJsCompilerType.IR) {
