@@ -1,14 +1,18 @@
 import org.apache.tools.ant.taskdefs.condition.Os
+import org.jetbrains.kotlin.gradle.ExperimentalKotlinGradlePluginApi
+import org.jetbrains.kotlin.gradle.dsl.JvmTarget
 import org.jetbrains.kotlin.gradle.plugin.KotlinPlatformType
 
 plugins { alias(libs.plugins.kotlin.multiplatform) }
 
-repositories { maven(url = "https://maven.pkg.jetbrains.space/public/p/kotlinx-html/maven") }
-
 kotlin {
-    tasks.withType<JavaExec> { jvmArgs("--enable-preview", "--enable-native-access=ALL-UNNAMED") }
+    tasks.withType<JavaExec> { jvmArgs("--enable-native-access=ALL-UNNAMED") }
     jvm {
-        compilations.all { kotlinOptions.jvmTarget = "21" }
+        @OptIn(ExperimentalKotlinGradlePluginApi::class)
+        compilerOptions {
+            jvmTarget = JvmTarget.JVM_22
+        }
+
         compilations {
             val main by getting
             val mainClassName = "com.littlekt.examples.JvmRunnerKt"
@@ -79,6 +83,7 @@ kotlin {
     sourceSets {
         val commonMain by getting {
             dependencies {
+                implementation(libs.wgpu4k)
                 implementation(libs.kotlinx.coroutines.core)
                 implementation(project(":core"))
                 implementation(project(":scene-graph"))
